--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
+Beaker==1.8.1
+FormEncode==1.3.1
+Mako==1.0.6
+MarkupSafe==1.0
+Paste==2.0.3
+PasteDeploy==1.5.2
+PasteScript==2.0.2
+Pygments==2.2.0
+Routes==2.4.1
+Tempita==0.5.2
+WebError==0.13.1
+WebHelpers==1.3
+WebOb==1.7.2
+WebTest==2.0.27
 argparse==1.2.1
+beautifulsoup4==4.5.3
 bottle==0.12.13
+decorator==4.0.11
+funcsigs==1.0.2
 lxml==3.7.3
+nose==1.3.7
+oauthlib==2.0.2
+repoze.lru==0.6
 requests==2.13.0
+requests-oauthlib==0.8.0
+simplejson==3.10.0
+six==1.10.0
+waitress==1.0.2
 wsgiref==0.1.2
